Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1345

Validating correct xml fails after validating invalid one.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • 2.5.0
    • 2.6.0
    • None
    • Linux

    Description

      I do following:
      1. create saxparser and set caching grammars
      2. load schema >3<
      3. validate >1< => valid
      4. validate >2< => invalid
      5. validate >1< => invalid (WRONG !!!)

      >1<
      <?xml version="1.0"?>
      <content xmlns="http://mind.p4.com/mytest"/>

      >2<
      <?xml version="1.0"?>
      <content></content>

      >3<
      <?xml version="1.0"?>
      <xs:schema elementFormDefault="qualified" targetNamespace="http://mind.p4.com/mytest" xmlns="http://mind.p4.com/mytest" xmlns:xs="http://www.w3.org/2001/XMLSchema">
      <xs:element name="content" type="xs:anyType"/>
      </xs:schema>

      Attachments

        1. bug.tar.gz
          5 kB
          mind
        2. IGXMLScanner2.cpp.patch
          0.6 kB
          Christian Will

        Activity

          People

            Unassigned Unassigned
            mind81 mind
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: