Patch from Christian Will for XERCESC-1345.  Reset fDTDElemeNonDeclPool in scanreset.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176342 13f79535-47bb-0310-9956-ffa450edef68